aws-networking/main.tf
provider "aws" {
  region  = "eu-west-2"
  profile = "ma"
}

terraform {
  backend "s3" {
    bucket = "codebuild-nl"
    key = "example-networking/terraform.tfstate"
    region = "eu-west-2"
  }
}

resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Application = var.app_name
    Environment = var.env
  }
}

resource "aws_vpc" "vpc" {
  cidr_block                       = var.cidr_vpc
  assign_generated_ipv6_cidr_block = false
  enable_dns_hostnames             = false
  tags = {
    Application = var.app_name
    Environment = var.env
  }
}

resource "aws_eip" "ip" {
  depends_on = [aws_internet_gateway.ig, aws_vpc.vpc]
  vpc        = true
  tags = {
    Application = var.app_name
    Environment = var.env
  }
}

resource "aws_nat_gateway" "nat" {
  depends_on    = [aws_internet_gateway.ig, aws_vpc.vpc]
  subnet_id     = aws_subnet.subnet_public.id
  allocation_id = aws_eip.ip.id
  tags = {
    Application = var.app_name
    Environment = var.env
  }
}

module "rg" {
  source = "../aws-resource-group"
  app_name = var.app_name
  env = var.env
}
